force-app/main/default/objects/Planejamento_de_Auditoria_Anual__c/Planejamento_de_Auditoria_Anual__c.object-meta.xml
<CustomObject>
    <label>Planejamento de Auditoria Anual</label>
    <nameField>
        <displayFormat>PAA - {0000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(PAA)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>