force-app/main/default/objects/Planejamento_de_Auditoria_Anual__c/fields/Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Auditoria__c</fullName>
    <formula>Empresa_Auditada__r.Name +&quot;-&quot;+(TEXT(YEAR(DATEVALUE(CreatedDate))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auditoria</label>
    <type>Text</type>
</CustomField>