force-app/main/default/objects/Planejamento_de_Auditoria_Anual__c/fields/ISO__c.field-meta.xml
<CustomField>
    <fullName>ISO__c</fullName>
    <label>Tipo de Auditoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO 9001:2008</fullName>
            </value>
            <value>
                <fullName>ISO 13485</fullName>
            </value>
            <value>
                <fullName>RDC 665:2022</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>