force-app/main/default/objects/Planejamento_de_Auditoria_Anual__c/fields/Outro__c.field-meta.xml
<CustomField>
    <fullName>Outro__c</fullName>
    <label>Outro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>