force-app/main/default/objects/Planejamento_de_Auditoria_Anual__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Auditoria__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>